hphp/test/zend/good/ext/standard/tests/general_functions/bug39322.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
if (!is_executable('/bin/sleep')) echo 'skip sleep not found';
}
